[gd_scene load_steps=31 format=3 uid="uid://byykfedkcavip"]

[ext_resource type="Script" uid="uid://drq4tgvrylh4o" path="res://Scripts/character_select.gd" id="1_r5nmx"]
[ext_resource type="PackedScene" uid="uid://dsgnfyvl16pyv" path="res://Scenes/Button.tscn" id="2_8cwx3"]
[ext_resource type="Texture2D" uid="uid://bi1pqm6ske2ja" path="res://Assets/Player/Blue_Slime/Animation/Idle.png" id="2_amipf"]
[ext_resource type="Texture2D" uid="uid://c2b5oekuvioru" path="res://Assets/Player/Red_Slime/Animation/Idle.png" id="3_fxt7g"]
[ext_resource type="Texture2D" uid="uid://c5li42bmjl4v" path="res://Assets/GUI/btn/prew.png" id="3_ydguf"]
[ext_resource type="Texture2D" uid="uid://dun6tlj76f8w" path="res://Assets/backgrounds/2.png" id="4_vfpf0"]
[ext_resource type="Texture2D" uid="uid://cmny28217uflm" path="res://Assets/GUI/settings/bg.png" id="5_adlwc"]
[ext_resource type="FontFile" uid="uid://craeahiq1gby2" path="res://Assets/Fonts/soup_of_justice/soupofjustice.ttf" id="8_2arlp"]
[ext_resource type="Texture2D" uid="uid://bxpwa66g7p1k2" path="res://Assets/GUI/upgrade/time.png" id="9_2arlp"]
[ext_resource type="AudioStream" uid="uid://cnacqddmh1ans" path="res://Assets/Sounds/others/mouse-click.mp3" id="9_ydguf"]
[ext_resource type="Texture2D" uid="uid://dk4ceorx06x7f" path="res://Assets/Art/skull-and-bones.png" id="10_1a83k"]
[ext_resource type="Texture2D" uid="uid://u7hwy1ku5ox5" path="res://Assets/Art/coin.png" id="11_un5gs"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fxt7g"]
atlas = ExtResource("2_amipf")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0prf"]
atlas = ExtResource("2_amipf")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8da4y"]
atlas = ExtResource("2_amipf")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j555r"]
atlas = ExtResource("2_amipf")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbnqh"]
atlas = ExtResource("2_amipf")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cwx3"]
atlas = ExtResource("2_amipf")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydguf"]
atlas = ExtResource("2_amipf")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfpf0"]
atlas = ExtResource("2_amipf")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_adlwc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxt7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0prf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8da4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j555r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbnqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cwx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydguf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfpf0")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_adlwc"]
atlas = ExtResource("3_fxt7g")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2arlp"]
atlas = ExtResource("3_fxt7g")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a83k"]
atlas = ExtResource("3_fxt7g")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_un5gs"]
atlas = ExtResource("3_fxt7g")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w288a"]
atlas = ExtResource("3_fxt7g")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1llf"]
atlas = ExtResource("3_fxt7g")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_a85h0"]
atlas = ExtResource("3_fxt7g")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_20b7b"]
atlas = ExtResource("3_fxt7g")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_chypt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_adlwc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2arlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a83k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_un5gs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w288a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1llf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a85h0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20b7b")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[node name="CharacterSelect" type="Node2D"]
script = ExtResource("1_r5nmx")

[node name="Back" parent="." instance=ExtResource("2_8cwx3")]
z_index = 4
position = Vector2(-333, -232)
texture = ExtResource("3_ydguf")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
scale = Vector2(1.2, 1.2)
texture = ExtResource("4_vfpf0")

[node name="Bg" type="Sprite2D" parent="."]
position = Vector2(3.40002, 0.600006)
scale = Vector2(0.6, 0.6)
texture = ExtResource("5_adlwc")

[node name="Blue" type="TextureButton" parent="."]
offset_left = -246.0
offset_top = -80.0
offset_right = -206.0
offset_bottom = -40.0
scale = Vector2(4, 4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Blue"]
position = Vector2(23, -30)
sprite_frames = SubResource("SpriteFrames_adlwc")

[node name="Red" type="TextureButton" parent="."]
offset_left = 85.0
offset_top = -80.0
offset_right = 125.0
offset_bottom = -40.0
scale = Vector2(4, 4)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Red"]
position = Vector2(23, -28)
sprite_frames = SubResource("SpriteFrames_chypt")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Label" type="Label" parent="."]
z_index = 1
offset_left = -260.0
offset_top = -242.0
offset_right = 473.0
offset_bottom = -171.0
theme_override_colors/font_color = Color(0.803922, 0.988235, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("8_2arlp")
theme_override_font_sizes/font_size = 70
text = "Select Character"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -167.0
offset_top = 148.0
offset_right = -127.0
offset_bottom = 188.0

[node name="Score" type="Label" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = 47.0
offset_top = -38.0
offset_right = 205.0
offset_bottom = -7.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("8_2arlp")
theme_override_font_sizes/font_size = 30
text = "Highscore: "

[node name="StatsContainer" type="HBoxContainer" parent="Control"]
z_index = 1
layout_mode = 0
offset_left = -79.0
offset_top = 19.0
offset_right = 426.0
offset_bottom = 51.0
alignment = 1

[node name="Wave" type="Label" parent="Control/StatsContainer"]
z_index = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("8_2arlp")
theme_override_font_sizes/font_size = 25
text = "Wave"

[node name="space3" type="Control" parent="Control/StatsContainer"]
z_index = 1
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="TimeLabel" type="TextureRect" parent="Control/StatsContainer"]
z_index = 1
layout_mode = 2
texture = ExtResource("9_2arlp")
expand_mode = 2

[node name="Time" type="Label" parent="Control/StatsContainer"]
z_index = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("8_2arlp")
theme_override_font_sizes/font_size = 25
text = "0"

[node name="space" type="Control" parent="Control/StatsContainer"]
z_index = 1
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Kills" type="TextureRect" parent="Control/StatsContainer"]
z_index = 1
layout_mode = 2
texture = ExtResource("10_1a83k")
expand_mode = 2

[node name="KillsNum" type="Label" parent="Control/StatsContainer"]
z_index = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("8_2arlp")
theme_override_font_sizes/font_size = 25
text = "0"

[node name="space2" type="Control" parent="Control/StatsContainer"]
z_index = 1
custom_minimum_size = Vector2(20, 0)
layout_mode = 2

[node name="Coins" type="TextureRect" parent="Control/StatsContainer"]
z_index = 1
layout_mode = 2
texture = ExtResource("11_un5gs")

[node name="CoinsCollected" type="Label" parent="Control/StatsContainer"]
z_index = 1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("8_2arlp")
theme_override_font_sizes/font_size = 25
text = "0"

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_ydguf")
bus = &"Sound"

[connection signal="click" from="Back" to="." method="_on_back_click"]
[connection signal="mouse_entered" from="Blue" to="." method="_on_blue_mouse_entered"]
[connection signal="mouse_exited" from="Blue" to="." method="_on_blue_mouse_exited"]
[connection signal="pressed" from="Blue" to="." method="_on_blue_pressed"]
[connection signal="mouse_entered" from="Red" to="." method="_on_red_mouse_entered"]
[connection signal="mouse_exited" from="Red" to="." method="_on_red_mouse_exited"]
[connection signal="pressed" from="Red" to="." method="_on_red_pressed"]
